tests/bad/other/bad00812.lat
int main() { 
  // lvalue wrong
  5 = 2;
  return 0;
}
